--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,6 +19,9 @@
         </div>
       </div>
       <div>
+        {{#each allProductDB}}
+        {{this.name}}
+        {{/each}}
         <div class="home text-center">
           <img src="assets/images/home-banner/22.jpg" alt="" class="bg-img blur-up lazyload">
           <div class="container">
