display pic added

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,15 +3,15 @@
     <div class="slide-1 home-slider">
       <div>
         <div class="home">
-          <img src="assets/images/fashion/banner/display1.jpg" alt="" class="bg-img blur-up lazyload">
+          <img src="assets/images/fashion/banner/display_new.jpeg" alt="" class="bg-img blur-up lazyload">
           <div class="container">
             <div class="row">
               <div class="col">
                 <div class="slider-contain">
-                  <div>
+                  {{!-- <div>
                     <h4>for kids</h4>
                     <h1>spring collection</h1><a href="#" class="btn btn-solid">shop now</a>
-                  </div>
+                  </div> --}}
                 </div>
               </div>
             </div>
@@ -23,7 +23,7 @@
         {{this.name}}
         {{/each}}
         <div class="home text-center">
-          <img src="assets/images/fashion/banner/display2.jpg" alt="" class="bg-img blur-up lazyload">
+          <img src="assets/images/fashion/banner/display1.jpg" alt="" class="bg-img blur-up lazyload">
           <div class="container">
             <div class="row">
               <div class="col">
