--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -65,6 +65,9 @@
                      <a href="/auth/logout">Logout</a>
                       </form>
                     </li>
+                    {{!-- {{#ifEquals userType "admin"}}
+  
+                      {{/ifEquals}} --}}
               </ul>
               {{else}}
                <li class="onhover-dropdown mobile-account"> <i class="fa fa-user" aria-hidden="true"></i>
