--- a/views/partials/categorypartials.hbs
+++ b/views/partials/categorypartials.hbs
@@ -1,6 +1,5 @@
-<img src="{{image}}" alt="{{id}} Product Image" style="height: 10rem;">
 
 <div>
-    <h1>{{name}}</h1>
-    <p>{{description}}</p>
+    <h1>{{DBcategory.name}}</h1>
+    <p>{{DBcategory.description}}</p>
 </div>
