--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -50,7 +50,7 @@
             <div class="header-contact">
               <ul>
                 <li>Welcome to Our store Stylio</li>
-                <li><i class="fa fa-phone" aria-hidden="true"></i>Call Us: 123 - 456 - 7890</li>
+                <li><i class="fa fa-phone" aria-hidden="true"></i>Call Us: 15229605169</li>
               </ul>
             </div>
           </div>
@@ -226,7 +226,7 @@
                       aria-hidden="true"></i> Back</div>
                 </div>
                 <ul id="sub-menu" class="sm pixelstrap sm-vertical">
-                  <li> <a href="/auth/partials/categorypartials">Belt</a>
+                  <li> <a href="/auth/partials/categorypartials">decoration</a>
                   </li>
                   <li> <a href="#">Carpets</a>
                     
@@ -236,7 +236,7 @@
                   </li>
                   <li> <a href="#">Bedding</a>
                   </li>
-                  <li> <a href="#">Pillow</a>
+                  <li> <a href="#">Cushion</a>
               </nav>
             </div>
           </div>
@@ -255,7 +255,7 @@
                       <li><a href="/product/create">Create Products</a></li>
                   {{/ifEquals}}
                   
-
+ <li><a href="/product">All Products</a></li>
 
 
 
@@ -327,8 +327,10 @@
                 <a href="/"><img src="/assets/images/logos/stylio.png" class="img-fluid blur-up lazyload"
                     alt=""></a>
               </div>
-              <p style="word-break:break-all; padding-bottom: 1rem;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+              <p style="word-break:break-all; padding-bottom: 1rem;">
+                Stylio is an online shop thatallows users to browse and purchase a wide range of home decor items, providing them with a seamless shopping experience.
+
+</p>
               <div class="footer-social">
                 <ul>
                   <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -347,11 +349,11 @@
               </div>
               <div class="footer-contant">
                 <ul>
-                  <li><a href="#">mens</a></li>
-                  <li><a href="#">womens</a></li>
-                  <li><a href="#">clothing</a></li>
-                  <li><a href="#">accessories</a></li>
-                  <li><a href="#">featured</a></li>
+                  <li><a href="#">Linen</a></li>
+                  <li><a href="#">Decorations</a></li>
+                  <li><a href="#">cushion</a></li>
+                  <li><a href="#">Bedding</a></li>
+                  <li><a href="#">Carpets</a></li>
                 </ul>
               </div>
             </div>
@@ -379,10 +381,10 @@
               </div>
               <div class="footer-contant">
                 <ul class="contact-list">
-                  <li><i class="fa fa-map-marker"></i>Multikart Demo Store, Demo store India
+                  <li><i class="fa fa-map-marker"></i>Stylio Online Store
                     345-659</li>
-                  <li><i class="fa fa-phone"></i>Call Us: 123-456-7898</li>
-                  <li><i class="fa fa-envelope"></i>Email Us: Support@Multikart.com</li>
+                  <li><i class="fa fa-phone"></i>Call Us: 15229605169</li>
+                  <li><i class="fa fa-envelope"></i>Email Us: Support@Stylio.com</li>
                   <li><i class="fa fa-fax"></i>Fax: 123456</li>
                 </ul>
               </div>
