--- a/views/product/create.hbs
+++ b/views/product/create.hbs
@@ -27,7 +27,7 @@
           <div class="col-lg-3">
             <div class="form-group">
               <label for="text">Product Name</label>
-              <input type="text" name="name" class="form-control" id="product-name" placeholder="Enter product name"
+              <input type="text" name="name" value="Testfdfddfd" class="form-control" id="product-name" placeholder="Enter product name"
                 required="">
             </div>
           </div>
@@ -117,7 +117,7 @@
           <div class="col-lg-12 py-2">
             <div class="form-group">
               <label for="review">Product Description</label>
-              <textarea class="form-control mb-0" name="description" placeholder="Enter Product Description"
+              <textarea class="form-control mb-0" name="description" placeholder="Enter Product Description" value="wfddsfdsfsd"
                 id="exampleFormControlTextarea1" rows="6"></textarea>
             </div>
           </div>
