--- a/views/category/view-details.hbs
+++ b/views/category/view-details.hbs
@@ -29,7 +29,7 @@
                 <div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false"
                   style="width: 676px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1;">
                   <div>
-                    <div style="width: 100%; display: inline-block;"><img src="{{product.image}}" alt=""
+                    <div style="width: 100%; display: inline-block;"><img src="{{categoryDB.image}}" alt=""
                         class="img-fluid blur-up image_zoom_cls-0 lazyloaded">
                     </div>
                   </div>
@@ -44,15 +44,15 @@
         </div>
         <div class="col-lg-6 rtl-text">
           <div class="product-right">
-            
-            <h2>{{product.name}}</h2>
+           
+            <h2>{{categoryDB.name}}</h2>
 
 
             <div class="label-section">
               <span class="badge badge-grey-color">#1 Best seller</span>
 
             </div>
-            <h3 class="price-detail">{{product.price}}€ </h3>
+            <h3 class="price-detail">{{categoryDB.price}}€ </h3>
             <div class="border-product">
               <h6 class="product-title">Discount</h6>
               <div >
