--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-  {{!-- <!-- Home slider -->
+  <!-- Home slider -->
   <section class="p-0">
     <div class="slide-1 home-slider">
       <div>
@@ -43,12 +43,24 @@
       </div>
     </div>
   </section>
-  <!-- Home slider end --> --}}
+  <!-- Home slider end -->
 
                          
 
     <!-- header end -->
 
+
+
+
+
+
+
+
+
+
+
+
+{{!-- 
 
     <!-- Home slider -->
     <section class="p-0">
@@ -333,31 +345,7 @@
             </div>
         </div>
     </div>
-    <!-- Add to cart modal popup end-->
-
-
-    <!-- facebook chat section start -->
-    <!-- <div id="fb-root"></div>
-    <script>
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s);
-            js.id = id;
-            js.src =
-                'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script> -->
-    <!-- Your customer chat code -->
-    <!-- <div class="fb-customerchat" attribution=setup_tool page_id="2123438804574660" theme_color="#0084ff"
-        logged_in_greeting="Hi! Welcome to PixelStrap Themes  How can we help you?"
-        logged_out_greeting="Hi! Welcome to PixelStrap Themes  How can we help you?">
-    </div> -->
-    <!-- facebook chat section end -->
-
-
-    <!-- tap to top -->
+   
     <div class="tap-top top-cls">
         <div>
             <i class="fa fa-angle-double-up"></i>
@@ -416,4 +404,4 @@
 
 </body>
 
-</html>
+</html> --}}
