--- a/views/product/allproduct.hbs
+++ b/views/product/allproduct.hbs
@@ -506,8 +506,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-
                                             {{/each}}
+                                             <li><a href="/product/{{allProductsDB.id}}/edit">Edit</a></li>
                                         </div>
                                     </div>
                                     <div class="product-pagination">
