--- a/views/product/view.hbs
+++ b/views/product/view.hbs
@@ -114,16 +114,25 @@
            
 
             <div class="border-product">
-              <h6 class="product-title">share it</h6>
-              <div class="product-icon">
-                <ul class="product-social">
-                  <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                  <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                </ul>
-              </div>
+
+
+ <div class="row">
+          <div class="col-lg-3">
+            <div class="form-group">
+      
+             <button>
+<a class="btn btn-solid w-auto" href="/product/{{product.id}}/edit">Edit</a>
+             </button> 
+      
+             <button>
+<a class="btn btn-solid w-auto" href="/product/{{product.id}}/delete">Delete</a>
+             </button> 
+
+         </div>
+          </div>
+        </div>
+
+
             </div>
           </div>
         </div>
