categories displaying done

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -230,19 +230,7 @@
                   <div class="sidebar-back text-start d-xl-none d-block"><i class="fa fa-angle-left pe-2"
                       aria-hidden="true"></i> Back</div>
                 </div>
-              
-                <ul id="sub-menu" class="sm pixelstrap sm-vertical">
-                  
-                  <a href='/view-details/Shoe'><li>SHOE</li></a>
-                 
-                  <li> <a href="/view-details/Living room sofa">Sofa</a>
-                    
-                  </li>
-                  <li> <a href="#">Bedding</a>
-                  </li>
-                  <li> <a href="#">Pillow</a>
-          
-                  </ul>
+                {{> categoryPartial}}
               </nav>
             </div>
           </div>
