changing app.js

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -230,7 +230,7 @@
                   <div class="sidebar-back text-start d-xl-none d-block"><i class="fa fa-angle-left pe-2"
                       aria-hidden="true"></i> Back</div>
                 </div>
-                {{> categoryPartial}}
+                {{!-- {{> categoryPartial}} --}}
               </nav>
             </div>
           </div>
