add to cart in progress

--- a/views/product/view.hbs
+++ b/views/product/view.hbs
@@ -79,7 +79,7 @@
                 </div>
               </div>
             </div>
-            <div class="product-buttons"><a href="javascript:void(0)" id="cartEffect"
+            <div class="product-buttons"><a href="/product/add-to-cart/{{product.id}}" id="cartEffect"
                 class="btn btn-solid hover-solid btn-animation"><i class="fa fa-shopping-cart me-1"
                   aria-hidden="true"></i> add to cart</a> </div>
             
