little changes on routes

--- a/views/product/delete.hbs
+++ b/views/product/delete.hbs
@@ -7,3 +7,4 @@
 <form action="/product/{{id}}/delete" method="post">
      <button type="submit" class="btn btn-solid">Delete</button>
  </form>
+ <a class="btn btn-solid w-auto" href="/product/allproduct">No</a>
