--- a/views/product/view.hbs
+++ b/views/product/view.hbs
@@ -118,15 +118,13 @@
 
  <div class="row">
           <div class="col-lg-3">
-            <div class="form-group">
+            <div class="form-group" style="display:flex; justify-content: space-evenly; margin-left: 5rem;">
       
-             <button>
+          
 <a class="btn btn-solid w-auto" href="/product/{{product.id}}/edit">Edit</a>
-             </button> 
       
-             <button>
-<a class="btn btn-solid w-auto" href="/product/{{product.id}}/delete">Delete</a>
-             </button> 
+         
+<a style="margin-left: 1rem" class="btn btn-solid w-auto" href="/product/{{product.id}}/delete">Delete</a>
 
          </div>
           </div>
