--- a/views/partials/categorypartials.hbs
+++ b/views/partials/categorypartials.hbs
@@ -1,5 +1,5 @@
-<ul id="sub-menu" class="sm pixelstrap sm-vertical">
-     {{#each categoryList}}
+{{!-- <ul id="sub-menu" class="sm pixelstrap sm-vertical">
+     {{#each categories}}
     <li> <a href="/product?category={{id}}">{{name}}</a></li>
     {{/each}}
-</ul>
+</ul> --}}
