--- a/views/partials/headerPartials.hbs
+++ b/views/partials/headerPartials.hbs
@@ -1,4 +1,3 @@
-<!-- Start of Header -->
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
@@ -22,6 +21,13 @@
               <i class="ti-search"></i>
             </button>
           </form>
+          {{!-- {{#if foundProductDB}}
+          {{#each foundProductDB}}
+          <p> Found Product{{name}}</p>
+          {{/each}}
+          {{/if}}
+
+          --}}
         </div>
         <div class="menu-right pull-right">
           <div>
@@ -51,30 +57,58 @@
                     </div>
                   </div>
                 </li>
+                <li class="onhover-div mobile-setting">
+                  <div><img src="/assets/images/icon/setting.png" class="img-fluid blur-up lazyload" alt=""> <i
+                      class="ti-settings"></i></div>
+
+
+                  <div class="show-div setting" id="javalan">
+                    <h6>language</h6>
+                    <ul>
+                      <li><a href="#Weglot-en">english</a></li>
+                      <li><a href="#Weglot-fr">french</a></li>
+                    </ul>
+                    <h6>currency</h6>
+                    <ul class="list-inline">
+                      <li><a href="#">euro</a></li>
+                      <li><a href="#">rupees</a></li>
+                      <li><a href="#">pound</a></li>
+                      <li><a href="#">doller</a></li>
+                    </ul>
+                  </div>
+                </li>
                 <li class="onhover-div mobile-cart">
                   <div><img src="/assets/images/icon/cart.png" class="img-fluid blur-up lazyload" alt=""> <i
                       class="ti-shopping-cart"></i></div>
-                  <span class="cart_qty_cls">{{cartItems.length}}</span>
+                  <span class="cart_qty_cls">2</span>
                   <ul class="show-div shopping-cart">
-                    {{#each cartItems}}
                     <li>
                       <div class="media">
-                        <a href="#"><img alt="" class="me-3" src="{{image}}"></a>
+                        <a href="#"><img alt="" class="me-3" src="/assets/images/fashion/product/1.jpg"></a>
                         <div class="media-body">
                           <a href="#">
-                            <h4>{{name}}</h4>
+                            <h4>{{product.name}}</h4>
                           </a>
                           <h4><span>{{price}}</span></h4>
                         </div>
                       </div>
                       <div class="close-circle"><a href="#"><i class="fa fa-times" aria-hidden="true"></i></a></div>
                     </li>
-                    {{/each}}
-
-
+                    <li>
+                      <div class="media">
+                        <a href="#"><img alt="" class="me-3" src="/assets/images/fashion/product/2.jpg"></a>
+                        <div class="media-body">
+                          <a href="#">
+                            <h4>{{product.name}}</h4>
+                          </a>
+                          <h4><span>{{price}}</span></h4>
+                        </div>
+                      </div>
+                      <div class="close-circle"><a href="#"><i class="fa fa-times" aria-hidden="true"></i></a></div>
+                    </li>
                     <li>
                       <div class="total">
-                        <h5>subtotal : <span>{{subTotal}}</span></h5>
+                        <h5>subtotal : <span>$299.00</span></h5>
                       </div>
                     </li>
                     <li>
@@ -109,6 +143,7 @@
               <div class="sidebar-back text-start d-xl-none d-block"><i class="fa fa-angle-left pe-2"
                   aria-hidden="true"></i> Back</div>
             </div>
+            {{!-- {{> categoryPartials categories}} --}}
             <ul id="sub-menu" class="sm pixelstrap sm-vertical">
               {{#each categories}}
               <li> <a href="/product?category={{id}}">{{name}}</a></li>
@@ -125,13 +160,43 @@
               <li>
                 <div class="mobile-back text-end">Back<i class="fa fa-angle-right ps-2" aria-hidden="true"></i>
                 </div>
+
               </li>
               <li><a href="/">Home</a></li>
-              {{#ifEquals currentUser.userType "admin"}}
+              {{#ifEquals userType "admin"}}
               <li><a href="/category/create">Create Category</a></li>
               <li><a href="/product/create">Create Products</a></li>
               {{/ifEquals}}
               <li><a href="/product">All Products</a></li>
+              <li class="mega" id="hover-cls">
+                <a href="/category/view">Brands</a>
+                <ul class="mega-menu">
+                  <li>
+                    <div class="container">
+                      <div class="row">
+                        <div class="col mega-box">
+                          <div class="link-section">
+                            <div class="menu-content">
+                              <ul>
+                                <li><a target="_blank" href="hasta">Hasta
+                                    1</a></li>
+                                <li><a target="_blank" href="usea">Usea
+                                    2</a></li>
+                                <li><a target="_blank" href="arket">Arket
+                                    3</a></li>
+                                <li><a target="_blank" href="jollein">Jollein
+                                    4</a></li>
+                                <li><a target="_blank" href="pr-home">PR Home
+                                    5</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </li>
             </ul>
           </nav>
         </div>
@@ -140,75 +205,3 @@
   </div>
 </div>
 </header>
-<!-- End of Header -->
-
-<!-- breadcrumb start -->
-<div class="breadcrumb-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="page-title">
-                    <h2>search</h2>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <nav aria-label="breadcrumb" class="theme-breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active">search</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- breadcrumb End -->
-<section class="section-b-space ratio_asos">
-    <div class="container">
-        <div class="row search-product">
-            {{#each searchResults}}
-            <div class="col-xl-2 col-md-4 col-6">
-                <div class="product-box">
-                    <div class="img-wrapper">
-                        <div class="front">
-                            <a href="/product/view/{{_id}}" class="bg-size blur-up lazyloaded"
-                            style="background-image: url('{{image}}'); background-size: cover; background-position: center center; display: block;"><img
-                                src="{{image}}" class="img-fluid blur-up bg-img lazyloaded"
-                                alt="" style="display: none;"></a>
-                        </div>
-                        <div class="back">
-                            <a href="/product/view/{{_id}}" class="bg-size blur-up lazyloaded"
-                                style="background-image: url('{{image}}'); background-size: cover; background-position: center center; display: block;">
-                                <img src="{{image}}" class="img-fluid blur-up lazyload bg-img" alt="" style="display: none;">
-                            </a>
-                        </div>
-                        <div class="cart-info cart-wrap">
-                            <button data-bs-toggle="modal" data-bs-target="#addtocart" title="Add to cart"><i
-                                    class="ti-shopping-cart"></i></button> <a href="javascript:void(0)"
-                                title="Add to Wishlist"><i class="ti-heart" aria-hidden="true"></i></a> <a href="#"
-                                data-bs-toggle="modal" data-bs-target="#quick-view" title="Quick View"><i
-                                    class="ti-search" aria-hidden="true"></i></a> <a href="compare.html"
-                                title="Compare"><i class="ti-reload" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                    <div class="product-detail">
-                        <div class="rating"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
-                                class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i>
-                        </div>
-                        <a href="product-page(no-sidebar).html">
-                            <h6>{{name}}</h6>
-                        </a>
-                        <h4>{{price}} €</h4>
-                        <ul class="color-variant">
-                            <li class="bg-light0"></li>
-                            <li class="bg-light1"></li>
-                            <li class="bg-light2"></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            {{/each}}
-           
-        </div>
-    </div>
-</section>
