--- a/views/product/view-cart.hbs
+++ b/views/product/view-cart.hbs
@@ -5,9 +5,9 @@
                 <div class="col-sm-12">
                     <div class="cart_counter">
                         <div class="countdownholder">
-                            Your cart will be expired in<span id="timer">14:12</span> minutes!
+                            Your have {{cartItems.length}}<span id="timer">14:12</span> minutes!
                         </div>
-                        <a href="checkout.html" class="cart_checkout btn btn-solid btn-xs">check out</a>
+                        <a href="/product/checkout" class="cart_checkout btn btn-solid btn-xs">check out</a>
                     </div>
                 </div>
                 <div class="col-sm-12 table-responsive-xs">
@@ -82,7 +82,7 @@
             </div>
             <div class="row cart-buttons">
                 <div class="col-6"><a href="#" class="btn btn-solid">continue shopping</a></div>
-                <div class="col-6"><a href="#" class="btn btn-solid">check out</a></div>
+                <div class="col-6"><a href="/product/checkout" class="btn btn-solid">check out</a></div>
             </div>
         </div>
     </section>
