--- a/views/product/view-cart.hbs
+++ b/views/product/view-cart.hbs
@@ -81,8 +81,8 @@
                 </div>
             </div>
             <div class="row cart-buttons">
-                <div class="col-6"><a href="#" class="btn btn-solid">continue shopping</a></div>
-                <div class="col-6"><a href="/product/checkout" class="btn btn-solid">check out</a></div>
+                <div class="col-6"><a href="/product/allproduct" class="btn btn-solid">continue shopping</a></div>
+                <div class="col-6"><a href="/order/checkout" class="btn btn-solid">check out</a></div>
             </div>
         </div>
     </section>
